--- a/index.html
+++ b/index.html
@@ -15,22 +15,22 @@
                     <h2>Registration Form</h2>
                 </div>
                 <div class="form-body">
-                    <label for="name">NAME</label>
+                    <label for="name">Name</label>
                     <input required type="text" name="name" id="name" />
 
-                    <label for="email">EMAIL</label>
+                    <label for="email">Email</label>
                     <input required type="email" name="email" id="email" />
 
-                    <label for="password">PASSWORD</label>
+                    <label for="password">Password</label>
                     <input required type="password" name="password" id="password" />
 
-                    <label for="dob">DATE OF BIRTH</label>
+                    <label for="dob">Dob</label>
                     <input required type="date" name="dob" id="dob" />
                 </div>
                 <div class="form-terms">
 
                     <input type="checkbox" name="acceptTerms" id="acceptTerms" />
-                    <label for="acceptTerms">ACCEPT TERMS AND CONDITIONS</label>
+                    <label for="acceptTerms">Accept terms and conditions</label>
 
                 </div>
 
@@ -44,10 +44,10 @@
             <table id="history" class="history">
 
                 <tr>
-                    <th>NAME</th>
-                    <th>EMAIL</th>
-                    <th>PASSWORD</th>
-                    <th>DATE OF BIRTH</th>
+                    <th>Name</th>
+                    <th>Email</th>
+                    <th>Password</th>
+                    <th>Dob</th>
                     <th>Accepted terms?</th>
                 </tr>
 
